fixed #1 - photo holder gets cut if window height too small
The content-height is currently around 450-500px.
Hence, added a media query so that if viewport height is less than 500px, transformY is set to none.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,9 @@ body > div{
         font-size: 25px;
     }
 }
+@media (max-height: 500px) {
+    body > div {
+        top: 20px;
+        transform: none;
+    }
+}
